// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QueryStepsDataSource query returns data for valid data-output-type query 1`] = `
[
  {
    "fields": [
      {
        "name": "name",
        "type": "string",
        "values": [
          "Step 1",
        ],
      },
    ],
    "refId": "A",
  },
]
`;

exports[`QueryStepsDataSource query returns no data when QuerySteps API returns empty array 1`] = `[]`;

exports[`QueryStepsDataSource query returns total count for valid total count output type queries 1`] = `
[
  {
    "fields": [
      {
        "name": "Total count",
        "values": [
          1,
        ],
      },
    ],
    "refId": "A",
  },
]
`;

exports[`QueryStepsDataSource query should convert properties to Grafana fields 1`] = `
[
  {
    "name": "properties",
    "type": "string",
    "values": [
      "{"key1":"value1","key2":"value2"}",
    ],
  },
]
`;

exports[`QueryStepsDataSource querySteps returns data when there are valid queries 1`] = `
{
  "continuationToken": undefined,
  "steps": [
    {
      "name": "Step 1",
      "properties": {
        "key1": "value1",
        "key2": "value2",
      },
      "stepId": "1",
    },
  ],
  "totalCount": 1,
}
`;
